flitcie-gallery3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flitcie-gallery3
  namespace: w3cie
  labels:
    app: flitcie-gallery3
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: flitcie-gallery3
  sessionAffinity: None
  type: ClusterIP
